# libKtrade

./: CMakeLists.txt  Dialogue.cpp  Dialogue.h  TestLog.cpp  TestOptions.cpp  TestSQL.cpp  TestSQL.h  Util.cpp  Util.h  main.cpp  mysql.ini  readme_php.md  test_options.ini  workbench.css  workday_script.php  zenity_file.bash
curl/: CMakeLists.txt  CURLCodes.txt  CodeMap.h  HtmlDoc.cpp  HtmlDoc.h  TestURLs.h  ktcurl.cpp  ktcurl.h  parse.cpp  parse.h
gnuplot/: README  gnuplot_test.data  helpstats.out  histogram1.gplt  histtest.gnu
sql/: CMakeLists.txt  Ksql.cpp  Ksql.h
